--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -469,16 +469,15 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1799d31d0>"
+       "<graphviz.graphs.Digraph at 0x125f4f910>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## TODO: make changes to the DAG\n",
     "g = Digraph()\n",
     "g.edge(\"interest rate\", \"City\")\n",
     "g.edge(\"inflation\", \"City\")\n",
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +730,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -766,6 +765,7 @@
     "seismic_data = {}\n",
     "rows_to_skip = 8\n",
     "\n",
+    "# for each year, get the earthquake risk data\n",
     "YEARS = ['2010', '2014', '2017', '2018']\n",
     "for year in YEARS:\n",
     "    filename = f\"P-Y{year}-MAP-AVR-TTL_MTTL\"\n",
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,6 +851,7 @@
     "            \n",
     "    return lat, lon\n",
     "\n",
+    "# calculate the longitude and latitude for earthquake risk data per year\n",
     "for year in seismic_data:\n",
     "    if year == \"2010\":\n",
     "        seismic_data[year][\"lat\"] = seismic_data[year][COLUMNS[0]].apply(lambda x: get_latlon(x[:-1])[0])\n",
@@ -862,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +951,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_3192/2482075409.py:20: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_17810/150715844.py:22: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  panel_data = panel_data.append(bond_data[prefecture], ignore_index=True)\n"
      ]
     },
@@ -1156,7 +1157,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,6 +1170,7 @@
     "bond_data = {}\n",
     "risk_column_names = COLUMNS[1:]\n",
     "\n",
+    "# get the bond data for each prefecture\n",
     "for prefecture in prefecture_for_bond:\n",
     "    bond_data[prefecture] = pd.read_csv(\"data/\"+prefecture+\".csv\")\n",
     "    bond_data[prefecture]['Date'] = pd.to_datetime(bond_data[prefecture]['Date'], unit='s')\n",
@@ -1176,6 +1178,7 @@
     "    bond_data[prefecture]['Prefecture'] = prefecture\n",
     "\n",
     "panel_data = pd.DataFrame()\n",
+    "# combine the earthquake risk data and bond data into a panel data\n",
     "for year in YEARS:\n",
     "    for prefecture in prefecture_for_bond:\n",
     "        for column in risk_column_names:\n",
@@ -1190,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1396,7 @@
        "4         0.006623        3 Year  0.009808  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1641,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,16 +1683,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Event_ID = \"Event_ID\"\n",
-    "# merged_df[Event_ID] = merged_df[Event_ID].str.replace('.','_')\n",
     "event_ids = ['20110311_M9_1_Tohoku', '20180618_M5_5_Osaka',\n",
     "       '20180906_M6_6_HokkaidoEasternIburi']\n",
     "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%Y/%m/%d')\n",
     "\n",
+    "# dummy variable:\n",
+    "# == 1 if it happened to the corresponding prefecture and if it is within a year of the event\n",
     "merged_df[\"Earthquake_Dummy_Tohoku\"] = np.where(\n",
     "    (merged_df['Prefecture'] == 'Fukushima')\n",
     "    & (merged_df['Date'] >= pd.to_datetime('2011/03/11'))\n",
@@ -1714,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1748,8 +1751,8 @@
       "Dep. Variable:                   Rate   R-squared:                       0.294\n",
       "Model:                            OLS   Adj. R-squared:                  0.294\n",
       "Method:                 Least Squares   F-statistic:                 1.067e+04\n",
-      "Date:                Mon, 11 Dec 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        12:49:02   Log-Likelihood:             2.1687e+06\n",
+      "Date:                Fri, 15 Dec 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        15:23:21   Log-Likelihood:             2.1687e+06\n",
       "No. Observations:              564182   AIC:                        -4.337e+06\n",
       "Df Residuals:                  564159   BIC:                        -4.337e+06\n",
       "Df Model:                          22                                         \n",
@@ -1799,8 +1802,8 @@
       "\\textbf{Dep. Variable:}                                                             &       Rate       & \\textbf{  R-squared:         } &     0.294   \\\\\n",
       "\\textbf{Model:}                                                                     &       OLS        & \\textbf{  Adj. R-squared:    } &     0.294   \\\\\n",
       "\\textbf{Method:}                                                                    &  Least Squares   & \\textbf{  F-statistic:       } & 1.067e+04   \\\\\n",
-      "\\textbf{Date:}                                                                      & Mon, 11 Dec 2023 & \\textbf{  Prob (F-statistic):} &     0.00    \\\\\n",
-      "\\textbf{Time:}                                                                      &     12:49:02     & \\textbf{  Log-Likelihood:    } & 2.1687e+06  \\\\\n",
+      "\\textbf{Date:}                                                                      & Fri, 15 Dec 2023 & \\textbf{  Prob (F-statistic):} &     0.00    \\\\\n",
+      "\\textbf{Time:}                                                                      &     15:23:21     & \\textbf{  Log-Likelihood:    } & 2.1687e+06  \\\\\n",
       "\\textbf{No. Observations:}                                                          &      564182      & \\textbf{  AIC:               } & -4.337e+06  \\\\\n",
       "\\textbf{Df Residuals:}                                                              &      564159      & \\textbf{  BIC:               } & -4.337e+06  \\\\\n",
       "\\textbf{Df Model:}                                                                  &          22      & \\textbf{                     } &             \\\\\n",
@@ -1858,18 +1861,12 @@
     "model_ols = smf.ols(f'Rate ~ 0 + C(Bond_Maturity_Numeric)*Earthquake_Dummy_Tohoku + C(Bond_Maturity_Numeric)*Earthquake_Dummy_HokkaidoEasternIburi +  C(Bond_Maturity_Numeric)*Earthquake_Dummy_Osaka + T30_I45_PS_2010', missing='drop', data=merged_df).fit()\n",
     "print(model_ols.summary())\n",
     "latex_summary = model_ols.summary().as_latex()\n",
-    "print(latex_summary)\n",
-    "\n",
-    "# model_ols = smf.ols(f'Rate ~ C(Bond_Maturity_Numeric) + T30_I45_PS_2017 + Mw + Earthquake_Dummy_Osaka', missing='drop', data=merged_df).fit()\n",
-    "# print(model_ols.summary())\n",
-    "\n",
-    "# model_ols = smf.ols(f'Rate ~ C(Bond_Maturity_Numeric) + T30_I45_PS_2017 + Mw + Earthquake_Dummy_HokkaidoEasternIburi', missing='drop', data=merged_df).fit()\n",
-    "# print(model_ols.summary())"
+    "print(latex_summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1890,8 +1887,8 @@
       "Dep. Variable:                   Rate   R-squared:                        0.7227\n",
       "Estimator:                   PanelOLS   R-squared (Between):              0.3133\n",
       "No. Observations:              564182   R-squared (Within):               0.2490\n",
-      "Date:                Mon, Dec 11 2023   R-squared (Overall):              0.2813\n",
-      "Time:                        12:49:06   Log-likelihood                 2.706e+06\n",
+      "Date:                Fri, Dec 15 2023   R-squared (Overall):              0.2813\n",
+      "Time:                        15:59:14   Log-likelihood                 2.706e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                   1.838e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
@@ -1923,7 +1920,51 @@
       "P-value: 0.0000\n",
       "Distribution: F(55,564118)\n",
       "\n",
-      "Included effects: Entity, Time\n"
+      "Included effects: Entity, Time\n",
+      "\\begin{center}\n",
+      "\\begin{tabular}{lclc}\n",
+      "\\toprule\n",
+      "\\textbf{Dep. Variable:}                          &        Rate        & \\textbf{  R-squared:         }   &      0.7227      \\\\\n",
+      "\\textbf{Estimator:}                              &      PanelOLS      & \\textbf{  R-squared (Between):}  &      0.3133      \\\\\n",
+      "\\textbf{No. Observations:}                       &       564182       & \\textbf{  R-squared (Within):}   &      0.2490      \\\\\n",
+      "\\textbf{Date:}                                   &  Fri, Dec 15 2023  & \\textbf{  R-squared (Overall):}  &      0.2813      \\\\\n",
+      "\\textbf{Time:}                                   &      15:59:14      & \\textbf{  Log-likelihood     }   &    2.706e+06     \\\\\n",
+      "\\textbf{Cov. Estimator:}                         &     Clustered      & \\textbf{                     }   &                  \\\\\n",
+      "\\textbf{}                                        &                    & \\textbf{  F-statistic:       }   &    1.838e+05     \\\\\n",
+      "\\textbf{Entities:}                               &         34         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
+      "\\textbf{Avg Obs:}                                &     1.659e+04      & \\textbf{  Distribution:      }   &   F(8,564118)    \\\\\n",
+      "\\textbf{Min Obs:}                                &       2220.0       & \\textbf{                     }   &                  \\\\\n",
+      "\\textbf{Max Obs:}                                &     3.072e+04      & \\textbf{  F-statistic (robust):} &    -1.214e+04    \\\\\n",
+      "\\textbf{}                                        &                    & \\textbf{  P-value            }   &      1.0000      \\\\\n",
+      "\\textbf{Time periods:}                           &         23         & \\textbf{  Distribution:      }   &   F(8,564118)    \\\\\n",
+      "\\textbf{Avg Obs:}                                &     2.453e+04      & \\textbf{                     }   &                  \\\\\n",
+      "\\textbf{Min Obs:}                                &       3326.0       & \\textbf{                     }   &                  \\\\\n",
+      "\\textbf{Max Obs:}                                &     3.825e+04      & \\textbf{                     }   &                  \\\\\n",
+      "\\textbf{}                                        &                    & \\textbf{                     }   &                  \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\begin{tabular}{lcccccc}\n",
+      "                                                 & \\textbf{Parameter} & \\textbf{Std. Err.} & \\textbf{T-stat} & \\textbf{P-value} & \\textbf{Lower CI} & \\textbf{Upper CI}  \\\\\n",
+      "\\midrule\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.3.0]}       &       0.0023       &       0.0005       &      4.9898     &      0.0000      &       0.0014      &       0.0032       \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.5.0]}       &       0.0034       &       0.0003       &      11.501     &      0.0000      &       0.0028      &       0.0039       \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.7.0]}       &       0.0049       &       0.0001       &      39.238     &      0.0000      &       0.0047      &       0.0052       \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.10.0]}      &       0.0072       &       0.0003       &      25.673     &      0.0000      &       0.0067      &       0.0078       \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.15.0]}      &       0.0105       &       0.0005       &      21.594     &      0.0000      &       0.0095      &       0.0114       \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.20.0]}      &       0.0129       &       0.0006       &      20.392     &      0.0000      &       0.0116      &       0.0141       \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_Tohoku}               &      -0.0012       &       0.0001       &     -10.255     &      0.0000      &      -0.0014      &      -0.0009       \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_Osaka}                &      -0.0003       &       0.0001       &     -2.4261     &      0.0153      &      -0.0006      &     -5.98e-05      \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_HokkaidoEasternIburi} &      -0.0003       &       0.0001       &     -2.3446     &      0.0190      &      -0.0005      &     -4.531e-05     \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "%\\caption{PanelOLS Estimation Summary}\n",
+      "\\end{center}\n",
+      "\n",
+      "F-test for Poolability: 5.947e+04 \\newline\n",
+      " P-value: 0.0000 \\newline\n",
+      " Distribution: F(55,564118) \\newline\n",
+      "  \\newline\n",
+      " Included effects: Entity, Time\n"
      ]
     }
    ],
@@ -1938,7 +1979,7 @@
     "result = model_fixed.fit(cov_type='clustered', cluster_entity=True, cluster_time=True)\n",
     "print(result.summary)\n",
     "\n",
-    "latex_summary = result.summary().as_latex()\n",
+    "latex_summary = result.summary.as_latex()\n",
     "print(latex_summary)\n"
    ]
   }
